busstops/static/css/style.scss
@import 'base';

@media (min-width: 30em) {
    @import '30em';
}

@media (min-width: 48em) {
    @import '48em';
}

@media (min-width: 62.5em) {
    @import '62em';
}

@media print {
    @import 'print';
}

// @media (min-width: 600px) {
//     footer,
//     .service-map {
//         margin-bottom: 110px;
//     }
// }

// @media (min-width: 960px) { // (60em)
//     .ad-wrapper > div {
//         min-height: 90px;
//     }
// }

@media (min-width: 970px) {
    .narrow .ad-wrapper {
        margin: 1em -121px 10px; // 970px
    }
}

@media (min-width: 1200px) {
    .narrow .ad-wrapper {
        margin: 1em -236px 10px; // 1200
    }

    .wide .ad-wrapper {
        margin: 1em -116px 10px;  // 1200px
    }
}

@media (prefers-color-scheme: dark) {
    #closeBox circle {
        fill: #fff!important;
    }

    #closeBox path {
        fill: #000!important;
    }

    #AFM_stickyFooter_ad.drawBorder {
        border-color: #000;
    }

    #AFM_inContentTop_ad iframe {
        box-shadow-color: var(--background-color);
    }
}

